src/objects/INV_TW_Source_Destination__c.object
<CustomObject>
    <fields>
        <fullName>Destination_Name__c</fullName>
        <formula>Destination__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Destination Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <label>Destination</label>
        <referenceTo>INV_Client__c</referenceTo>
        <relationshipLabel>INV_TW_Sources_Destination_Destination</relationshipLabel>
        <relationshipName>INV_TW_Sources_Destination_Destination</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Name__c</fullName>
        <formula>Source__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <referenceTo>INV_Client__c</referenceTo>
        <relationshipLabel>INV_TW_Sources_Destination_Source</relationshipLabel>
        <relationshipName>INV_TW_Sources_Destination_Source</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>INV TW Source Destination</label>
    <listViews>
        <fullName>All_Detail</fullName>
        <columns>Source_Name__c</columns>
        <columns>Destination_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Detail</label>
    </listViews>
    <nameField>
        <displayFormat>Combination-{00000}</displayFormat>
        <label>INT TW Origin Destination Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>INV TW Sources Destinations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>